@@ -3,10 +3,8 @@ Changes in 1.3.8
 
 New features:
 
-
 Bugs fixed:
-
-
+- 2952616 internalProvider is not Threadsafe
 
 Changes in 1.3.7
 ================
